apps/base/media-server/resources/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio.io/dataplane-mode: ambient
    pod-security.kubernetes.io/enforce: baseline # TODO: restricted
    pod-security.kubernetes.io/warn: restricted
  name: media
