apps/base/media-server/resources/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/component: bazarr
    app.kubernetes.io/instance: media-server
    app.kubernetes.io/name: bazarr
  name: bazarr
spec:
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  podManagementPolicy: OrderedReady
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app.kubernetes.io/component: bazarr
      app.kubernetes.io/instance: media-server
      app.kubernetes.io/name: bazarr
  serviceName: bazarr
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: bazarr
      labels:
        app.kubernetes.io/component: bazarr
        app.kubernetes.io/instance: media-server
        app.kubernetes.io/name: bazarr
    spec:
      containers:
        - env:
            - name: LANG
              value: en_GB.UTF-8
            - name: TZ
              value: Europe/London
          image: ghcr.io/nosborn/bazarr:latest
          imagePullPolicy: Always
          # livenessProbe:
          #   failureThreshold: 3
          #   httpGet:
          #     path: /ping
          #     port: http
          #   periodSeconds: 10
          #   successThreshold: 1
          #   timeoutSeconds: 1
          name: bazarr
          ports:
            - containerPort: 6767
              name: http
          # readinessProbe:
          #   failureThreshold: 3
          #   httpGet:
          #     path: /ping
          #     port: http
          #   periodSeconds: 10
          #   successThreshold: 1
          #   timeoutSeconds: 1
          resources: {}
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
          volumeMounts:
            - mountPath: /app/data/config/config.yaml
              name: config
              subPath: config.yaml
            - mountPath: /app/data
              name: data
            - mountPath: /library
              name: library
            - mountPath: /tmp
              name: temp
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      terminationGracePeriodSeconds: 60
      volumes:
        - name: config
          secret:
            secretName: bazarr-config
        - emptyDir: {}
          name: data
        - name: library
          persistentVolumeClaim:
            claimName: media-library
        - emptyDir: {}
          name: temp
  updateStrategy:
    rollingUpdate:
      partition: 0
    type: RollingUpdate
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/component: lidarr
    app.kubernetes.io/instance: media-server
    app.kubernetes.io/name: lidarr
  name: lidarr
spec:
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  podManagementPolicy: OrderedReady
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app.kubernetes.io/component: lidarr
      app.kubernetes.io/instance: media-server
      app.kubernetes.io/name: lidarr
  serviceName: lidarr
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: lidarr
      labels:
        app.kubernetes.io/component: lidarr
        app.kubernetes.io/instance: media-server
        app.kubernetes.io/name: lidarr
    spec:
      containers:
        - env:
            - name: LANG
              value: en_GB.UTF-8
          image: ghcr.io/nosborn/lidarr:latest
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /ping
              port: http
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: lidarr
          ports:
            - containerPort: 8686
              name: http
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /ping
              port: http
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources: {}
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
          volumeMounts:
            - mountPath: /data
              name: data
            - mountPath: /data/config.xml
              name: config
              readOnly: true
              subPath: config.xml
            - mountPath: /library
              name: library
            - mountPath: /tmp
              name: temp
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      terminationGracePeriodSeconds: 60
      volumes:
        - name: config
          secret:
            secretName: lidarr-config
        - name: data
          persistentVolumeClaim:
            claimName: lidarr-data
        - name: library
          persistentVolumeClaim:
            claimName: media-library
        - emptyDir: {}
          name: temp
  updateStrategy:
    rollingUpdate:
      partition: 0
    type: RollingUpdate
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/component: nzbget
    app.kubernetes.io/instance: media-server
    app.kubernetes.io/name: nzbget
  name: nzbget
spec:
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  podManagementPolicy: OrderedReady
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app.kubernetes.io/component: nzbget
      app.kubernetes.io/instance: media-server
      app.kubernetes.io/name: nzbget
  serviceName: nzbget
  template:
    metadata:
      labels:
        app.kubernetes.io/component: nzbget
        app.kubernetes.io/instance: media-server
        app.kubernetes.io/name: nzbget
    spec:
      containers:
        - env:
            - name: LANG
              value: en_GB.UTF-8
          image: ghcr.io/nosborn/nzbget:latest
          imagePullPolicy: Always
          lifecycle:
            preStop:
              exec:
                command:
                  - /app/nzbget
                  - --configfile=/data/nzbget.conf
                  - --quit
          livenessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: http
            timeoutSeconds: 1
          name: nzbget
          ports:
            - containerPort: 6789
              name: http
          readinessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: http
            timeoutSeconds: 1
          resources: {}
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
          volumeMounts:
            - mountPath: /app/nzbget.conf
              name: config
              readOnly: true
              subPath: nzbget.conf
            - mountPath: /downloads
              name: downloads
            - mountPath: /library
              name: library
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      terminationGracePeriodSeconds: 60
      volumes:
        - name: config
          secret:
            secretName: nzbget-config
        - name: downloads
          persistentVolumeClaim:
            claimName: nzbget-downloads
        - name: library
          persistentVolumeClaim:
            claimName: media-library
  updateStrategy:
    rollingUpdate:
      partition: 0
    type: RollingUpdate
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/component: ombi
    app.kubernetes.io/instance: media-server
    app.kubernetes.io/name: ombi
  name: ombi
spec:
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  podManagementPolicy: OrderedReady
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app.kubernetes.io/component: ombi
      app.kubernetes.io/instance: media-server
      app.kubernetes.io/name: ombi
  serviceName: ombi
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: ombi
      labels:
        app.kubernetes.io/component: ombi
        app.kubernetes.io/instance: media-server
        app.kubernetes.io/name: ombi
    spec:
      containers:
        - env:
            - name: LANG
              value: en_GB.UTF-8
          image: ghcr.io/nosborn/ombi:latest
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 10
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: http
            timeoutSeconds: 1
          name: ombi
          ports:
            - containerPort: 5000
              name: http
          readinessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: http
            timeoutSeconds: 1
          resources: {}
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
          volumeMounts:
            - mountPath: /data
              name: data
            - mountPath: /tmp
              name: tmp
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      terminationGracePeriodSeconds: 60
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: ombi-data
        - emptyDir:
            medium: Memory
          name: tmp
  updateStrategy:
    rollingUpdate:
      partition: 0
    type: RollingUpdate
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/component: prowlarr
    app.kubernetes.io/instance: media-server
    app.kubernetes.io/name: prowlarr
  name: prowlarr
spec:
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  podManagementPolicy: OrderedReady
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app.kubernetes.io/component: prowlarr
      app.kubernetes.io/instance: media-server
      app.kubernetes.io/name: prowlarr
  serviceName: prowlarr
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: prowlarr
      labels:
        app.kubernetes.io/component: prowlarr
        app.kubernetes.io/instance: media-server
        app.kubernetes.io/name: prowlarr
    spec:
      containers:
        - env:
            - name: LANG
              value: en_GB.UTF-8
          image: ghcr.io/nosborn/prowlarr:latest
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /ping
              port: http
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: prowlarr
          ports:
            - containerPort: 9696
              name: http
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /ping
              port: http
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources: {}
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
          volumeMounts:
            - mountPath: /data
              name: data
            - mountPath: /data/config.xml
              name: config
              readOnly: true
              subPath: config.xml
            - mountPath: /library
              name: library
            - mountPath: /tmp
              name: temp
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      terminationGracePeriodSeconds: 60
      volumes:
        - name: config
          secret:
            secretName: prowlarr-config
        - name: data
          persistentVolumeClaim:
            claimName: prowlarr-data
        - name: library
          persistentVolumeClaim:
            claimName: media-library
        - emptyDir: {}
          name: temp
  updateStrategy:
    rollingUpdate:
      partition: 0
    type: RollingUpdate
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/component: radarr
    app.kubernetes.io/instance: media-server
    app.kubernetes.io/name: radarr
  name: radarr
spec:
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  podManagementPolicy: OrderedReady
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app.kubernetes.io/component: radarr
      app.kubernetes.io/instance: media-server
      app.kubernetes.io/name: radarr
  serviceName: radarr
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: radarr
      labels:
        app.kubernetes.io/component: radarr
        app.kubernetes.io/instance: media-server
        app.kubernetes.io/name: radarr
    spec:
      containers:
        - env:
            - name: LANG
              value: en_GB.UTF-8
          image: ghcr.io/nosborn/radarr:latest
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /ping
              port: http
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: radarr
          ports:
            - containerPort: 7878
              name: http
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /ping
              port: http
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources: {}
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
          volumeMounts:
            - mountPath: /data
              name: data
            - mountPath: /data/config.xml
              name: config
              readOnly: true
              subPath: config.xml
            - mountPath: /library
              name: library
            - mountPath: /tmp
              name: temp
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      terminationGracePeriodSeconds: 60
      volumes:
        - name: config
          secret:
            secretName: radarr-config
        - name: data
          persistentVolumeClaim:
            claimName: radarr-data
        - name: library
          persistentVolumeClaim:
            claimName: media-library
        - emptyDir: {}
          name: temp
  updateStrategy:
    rollingUpdate:
      partition: 0
    type: RollingUpdate
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/component: sonarr
    app.kubernetes.io/instance: media-server
    app.kubernetes.io/name: sonarr
  name: sonarr
spec:
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  podManagementPolicy: OrderedReady
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app.kubernetes.io/component: sonarr
      app.kubernetes.io/instance: media-server
      app.kubernetes.io/name: sonarr
  serviceName: sonarr
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: sonarr
      labels:
        app.kubernetes.io/component: sonarr
        app.kubernetes.io/instance: media-server
        app.kubernetes.io/name: sonarr
    spec:
      containers:
        - env:
            - name: LANG
              value: en_GB.UTF-8
          image: ghcr.io/nosborn/sonarr:latest
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /ping
              port: http
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: sonarr
          ports:
            - containerPort: 8989
              name: http
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /ping
              port: http
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources: {}
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
          volumeMounts:
            - mountPath: /data
              name: data
            - mountPath: /data/config.xml
              name: config
              readOnly: true
              subPath: config.xml
            - mountPath: /library
              name: library
            - mountPath: /tmp
              name: temp
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      terminationGracePeriodSeconds: 60
      volumes:
        - name: config
          secret:
            secretName: sonarr-config
        - name: data
          persistentVolumeClaim:
            claimName: sonarr-data
        - name: library
          persistentVolumeClaim:
            claimName: media-library
        - emptyDir: {}
          name: temp
  updateStrategy:
    rollingUpdate:
      partition: 0
    type: RollingUpdate
