apps/base/media-server/resources/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: bazarr
    app.kubernetes.io/instance: media-server
    app.kubernetes.io/name: bazarr
  name: bazarr
  namespace: media
spec:
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 6767
  selector:
    app.kubernetes.io/component: bazarr
    app.kubernetes.io/instance: media-server
    app.kubernetes.io/name: bazarr
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: lidarr
    app.kubernetes.io/instance: media-server
    app.kubernetes.io/name: lidarr
  name: lidarr
  namespace: media
spec:
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 8686
  selector:
    app.kubernetes.io/component: lidarr
    app.kubernetes.io/instance: media-server
    app.kubernetes.io/name: lidarr
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: muxarr
    app.kubernetes.io/instance: media-server
    app.kubernetes.io/name: muxarr
  name: muxarr
  namespace: media
spec:
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 8183
  selector:
    app.kubernetes.io/component: muxarr
    app.kubernetes.io/instance: media-server
    app.kubernetes.io/name: muxarr
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: nzbget
    app.kubernetes.io/instance: media-server
    app.kubernetes.io/name: nzbget
  name: nzbget
  namespace: media
spec:
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 6789
  selector:
    app.kubernetes.io/component: nzbget
    app.kubernetes.io/instance: media-server
    app.kubernetes.io/name: nzbget
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: ombi
    app.kubernetes.io/instance: media-server
    app.kubernetes.io/name: ombi
  name: ombi
  namespace: media
spec:
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 5000
  selector:
    app.kubernetes.io/component: ombi
    app.kubernetes.io/instance: media-server
    app.kubernetes.io/name: ombi
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: prowlarr
    app.kubernetes.io/instance: media-server
    app.kubernetes.io/name: prowlarr
  name: prowlarr
  namespace: media
spec:
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 9696
  selector:
    app.kubernetes.io/component: prowlarr
    app.kubernetes.io/instance: media-server
    app.kubernetes.io/name: prowlarr
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: qbittorrent
    app.kubernetes.io/instance: media-server
    app.kubernetes.io/name: qbittorrent
  name: qbittorrent
  namespace: media
spec:
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 8080
  selector:
    app.kubernetes.io/component: qbittorrent
    app.kubernetes.io/instance: media-server
    app.kubernetes.io/name: qbittorrent
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: radarr
    app.kubernetes.io/instance: media-server
    app.kubernetes.io/name: radarr
  name: radarr
  namespace: media
spec:
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 7878
  selector:
    app.kubernetes.io/component: radarr
    app.kubernetes.io/instance: media-server
    app.kubernetes.io/name: radarr
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: sonarr
    app.kubernetes.io/instance: media-server
    app.kubernetes.io/name: sonarr
  name: sonarr
  namespace: media
spec:
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 8989
  selector:
    app.kubernetes.io/component: sonarr
    app.kubernetes.io/instance: media-server
    app.kubernetes.io/name: sonarr
  type: ClusterIP
