apps/base/media-server/resources/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: media-server
    app.kubernetes.io/name: bazarr
  name: bazarr
  namespace: media
spec:
  hostnames:
    - bazarr.example.com
  parentRefs:
    - name: gateway
  rules:
    - backendRefs:
        - name: bazarr
          port: 6767
      filters:
        - extensionRef:
            group: traefik.io
            kind: Middleware
            name: ip-allowlist
          type: ExtensionRef
        - extensionRef:
            group: traefik.io
            kind: Middleware
            name: security-headers
          type: ExtensionRef
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: media-server
    app.kubernetes.io/name: lidarr
  name: lidarr
  namespace: media
spec:
  hostnames:
    - lidarr.example.com
  parentRefs:
    - name: gateway
  rules:
    - backendRefs:
        - name: lidarr
          port: 8686
      filters:
        - extensionRef:
            group: traefik.io
            kind: Middleware
            name: ip-allowlist
          type: ExtensionRef
        - extensionRef:
            group: traefik.io
            kind: Middleware
            name: security-headers
          type: ExtensionRef
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: media-server
    app.kubernetes.io/name: muxarr
  name: muxarr
  namespace: media
spec:
  parentRefs:
    - name: gateway
  hostnames:
    - muxarr.example.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - extensionRef:
            group: traefik.io
            kind: Middleware
            name: ip-allowlist
          type: ExtensionRef
        - extensionRef:
            group: traefik.io
            kind: Middleware
            name: security-headers
          type: ExtensionRef
      backendRefs:
        - name: muxarr
          port: 8183
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: media-server
    app.kubernetes.io/name: nzbget
  name: nzbget
  namespace: media
spec:
  parentRefs:
    - name: gateway
  hostnames:
    - nzbget.example.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - extensionRef:
            group: traefik.io
            kind: Middleware
            name: ip-allowlist
          type: ExtensionRef
        - extensionRef:
            group: traefik.io
            kind: Middleware
            name: security-headers
          type: ExtensionRef
      backendRefs:
        - name: nzbget
          port: 6789
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: media-server
    app.kubernetes.io/name: ombi
  name: ombi
  namespace: media
spec:
  parentRefs:
    - name: gateway
  hostnames:
    - ombi.example.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - extensionRef:
            group: traefik.io
            kind: Middleware
            name: ip-allowlist
          type: ExtensionRef
        - extensionRef:
            group: traefik.io
            kind: Middleware
            name: security-headers
          type: ExtensionRef
      backendRefs:
        - name: ombi
          port: 5000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: media-server
    app.kubernetes.io/name: prowlarr
  name: prowlarr
  namespace: media
spec:
  parentRefs:
    - name: gateway
  hostnames:
    - prowlarr.example.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - extensionRef:
            group: traefik.io
            kind: Middleware
            name: ip-allowlist
          type: ExtensionRef
        - extensionRef:
            group: traefik.io
            kind: Middleware
            name: security-headers
          type: ExtensionRef
      backendRefs:
        - name: prowlarr
          port: 9696
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: media-server
    app.kubernetes.io/name: qbittorrent
  name: qbittorrent
  namespace: media
spec:
  parentRefs:
    - name: gateway
  hostnames:
    - qbittorrent.example.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - extensionRef:
            group: traefik.io
            kind: Middleware
            name: ip-allowlist
          type: ExtensionRef
        - extensionRef:
            group: traefik.io
            kind: Middleware
            name: security-headers
          type: ExtensionRef
      backendRefs:
        - name: qbittorrent
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: media-server
    app.kubernetes.io/name: radarr
  name: radarr
  namespace: media
spec:
  parentRefs:
    - name: gateway
  hostnames:
    - radarr.example.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - extensionRef:
            group: traefik.io
            kind: Middleware
            name: ip-allowlist
          type: ExtensionRef
        - extensionRef:
            group: traefik.io
            kind: Middleware
            name: security-headers
          type: ExtensionRef
      backendRefs:
        - name: radarr
          port: 7878
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: media-server
    app.kubernetes.io/name: sonarr
  name: sonarr
  namespace: media
spec:
  parentRefs:
    - name: gateway
  hostnames:
    - sonarr.example.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - extensionRef:
            group: traefik.io
            kind: Middleware
            name: ip-allowlist
          type: ExtensionRef
        - extensionRef:
            group: traefik.io
            kind: Middleware
            name: security-headers
          type: ExtensionRef
      backendRefs:
        - name: sonarr
          port: 8989
